assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;600&family=Stick+No+Bills:wght@800&display=swap');

* {
  padding: 0;
  margin: 0;
  border: 0;
}

body{
    max-width: 2500px;
    margin-right: auto;
    margin-left: auto;
}
/*---------------------------------------Colours*/
.logo {
  color: #5f31af;
}

h2 {
  color: #5f31af;
}

menu a {
  color: #6a028c;
}

h3 {
  color: #6a028c;
}

p {
  color: #0832a6;
}

footer a {
  color: #5f31af;
}

/*-------------------------------------------------------------------------------------------headings/special padding/ text*/
#logo {
  font-size: 3rem;
  font-family: 'Stick No Bills', sans-serif;
  text-transform: uppercase;
  padding: 30px;
}

#menu {
  font-size: 2em;
  list-style-type: none;
}

#menu li {
  float: right;
  margin-right: 30px;
  font-family: 'Comfortaa', cursive;
  text-transform: uppercase;
}

#menu a {
  text-decoration: none;
}

#menu a:hover {
  border-bottom: 1px solid #5f31af;
}

.heading{
    margin-top: 30px;
    margin-bottom: 25px;
}

.heading h2 {
  text-align: center;
  font-family: 'Comfortaa', sans-serif;
  font-size: 3em;
  padding: 15px;
  text-transform: uppercase;
}

.heading span {
  font-size: 25px;
  text-transform: uppercase;
}

.heading p {
  text-align: center;
  font-family: 'Comfortaa', sans-serif;
  font-size: 1.5em;
  font-weight: bold;
  max-width: 100%;
  padding: 20px 190px;
  line-height: 75px;
 
}

footer {
  height: 160px;
  width: 100%;
  font-family: 'Comfortaa', cursive;
  text-transform: uppercase;
  font-weight: bold;
}

footer h2 {
  text-align: center;
  padding: 10px;
}

footer p {
  text-align: center;
  text-transform: none;
  font-size: 1.3em;
  padding: 10px;
}

.social-network {
  text-align: center;
}

.social-network li {
  display: inline;
}

.social-network i {
  margin: 13px ;
  padding-left: 15px;
  color: #5f31af;
  font-weight: bold;
  font-size: 2em;
}

/*---------------------------------------------------------------------------------------------------------------About section*/
.about-heading h2 {
  text-align: center;
  font-size: 3em;
  text-transform: uppercase;
  margin: 90px;
  font-family: 'Comfortaa', sans-serif;
}

.card h3 {
  text-align: center;
  font-family: 'Comfortaa', sans-serif;
  font-size: 2em;
  padding: 35px 90px;
  text-transform: uppercase;

}

.card p {
  font-family: 'Comfortaa', sans-serif;
  text-align: center;
  font-size: 1.5em;
  line-height: 55px;
  padding: 25px 190px;
  font-weight: bold;

}

/*----------------------------------------------------------------------------------------------------------------form*/
.form-section {
  clear: both;
  background: url("../img/home-page.webp");
  background-size: cover;
  background-position: center;
  padding: 50px;
  height: 900px;
}

.contact-form {
  color: #5f31af;
  background-color: #ebe6ff;
  opacity: 96%;
  padding: 50px;
  font-family: 'Comfortaa', sans-serif;
  font-size: 1rem;
}

.contact-form h2 {
  color: #5f31af;
  background-color: #ebe6ff;
  font-size: 3em;
}

.text-input {
  color: #5f31af;
  font-size: 2rem;
  text-transform: capitalize;
  font-weight: bold;
  margin-bottom: 3em;
}

.box {
  border: 1px solid #482a83;
  border-radius: 5px;
  background-color: #ebe6ff;
  color: #6a028c;
  padding: 6px;
  font-size: 1.5em;
  margin: 18px 1px;
}

textarea {
  width: 100%;
  height: 150px;
  padding: 20px;
  box-sizing: border-box;
  border: 1px solid #482a83;
  border-radius: 5px;
  background-color: #ebe6ff;
  color: #6a028c;
  font-family: 'Comfortaa', sans-serif;
  font-weight: bold;
  margin: 18px 1px;
  font-size: 1.5em;
}

.reset-button,
.submit-button {
  margin-top: 9px;
  border-radius: 10px;
  padding: 5px 5px;
  text-align: center;
  font-size: 30px;
  background-color: #5f31af;
  color: #fafafa;
  display: inline-block;
  font-family: 'Comfortaa', sans-serif;
}

.form-submitted-heading{
  height: 800px;
  width: 100%;
}

.form-submitted-image {
  background: url("../img/form-submitted.jpg") no-repeat center center;
  height: 500px;
  width:100%;

}
.form-submitted-heading h2 {
  text-align: center;
  font-size: 3em;
  text-transform: uppercase;
  font-family: 'Comfortaa', sans-serif;
  padding-bottom: 60px;
  line-height: 40px;
}

.form-submitted-heading h3 {
  text-align: center;
  font-size: 2.5em;
  text-transform: uppercase;
  font-family: 'Comfortaa', sans-serif;
  padding-top: 45px;
}
.form-submitted-heading p {
  font-size: 2em;
  text-transform: none;
  text-align: center;
  font-family: 'Comfortaa', sans-serif;
  padding: 15px;
  font-weight: bold;
}

/*----------------------------------------------------------------------------------------------------------image*/
#hero-image {
  height: 650px;
  width: 100%;
  background: url("../img/home-page.webp") no-repeat center center;
  animation-name: hero-zoom;
  animation-duration: 2s;
  animation-fill-mode: forwards;
}

#hero-outer {
  height: 650px;
  width: 100%;
  overflow: hidden;
}

@keyframes hero-zoom {
  from {
    transform: scale(3);
  }

  to {
    transform: scale(1);
  }
}

#box-container {
  max-width: 100%;
  height: 20vw;
  background: url("../img/about-us.webp") no-repeat center center;
  margin: 0 auto;
}



/*------------------------------------------------------------------------------------------------------media queries*/
@media (min-width: 280px) and (max-width: 600px) {
  #logo {
    float: left;
    font-size: 26px;
    padding: 15px;
  }

  #menu {
    padding-top: 65px;
  }

  #menu li {
    margin-right: 25px;
    font-size: 0.4em;
    font-weight: bold;
  }

  #hero-image {
    height: 300px;
    width: 100%;
    background: url("../img/mobil-home-page.webp") no-repeat center center;
    animation-name: hero-zoom;
    animation-duration: 2s;
    animation-fill-mode: forwards;
  }

  #hero-outer {
    height: 300px;
    width: 100%;
    overflow: hidden;
  }

  @keyframes hero-zoom {
    from {
      transform: scale(2);
    }

    to {
      transform: scale(1);
    }
  }

  .heading h2 {
    font-size: 40px;
    padding: 15px 26px;
  }

  .heading span {
    font-size: 0.5em;
  }

  .heading p {
    text-align: center;
    font-size: 26px;
    font-weight: bold;
    max-width: 100%;
    line-height: 45px;
    padding: 15px;
  }

  footer {
    height: 235px;
    width: 100%;
    font-family: 'Comfortaa', cursive;
    text-transform: uppercase;
    font-weight: bold;
    position: absolute;
  }
  
  footer h2 {
    text-align: center;
    padding: 8px 5px;
    margin-top: 25px;
  }
  
  footer p {
    text-align: center;
    text-transform: none;
    padding: 3px 10px;
    line-height: 25px;
   
  }

  .social-network p {
     font-size: 20px;
    margin: 30px;
    text-transform: none;
  }

  .social-network li {
    display: inline;
  }

  .social-network i {
    font-size: 1.5em;
    margin: 8px auto;
    padding: 10px;
    color: #5f31af;
  }

  /*--------------About section*/
  .about-heading h2 {
    font-size: 1em;
    margin-top: 35px;
  }

  .card h3 {
    font-size: 1em;
    padding: 14px;
    text-transform: uppercase;
  }

  .card p {
    font-size: 1em;
    line-height: 30px;
    padding: 23px;
    font-weight: bold;
  }

  #box-container {
    max-width: 100%;
    height: 550px;
    background: url("../img/about-us.webp") no-repeat center center;
    margin: 0 auto;
  }

  /*-----------------------------------------------form*/
  .form-section {
    clear: both;
    background: url("../img/mobil-home-page.webp");
    height: 900px;
    background-size: cover;
    background-position: center;
    padding: 10px;
  }

  .contact-form {
    margin-top: 100px;
    color: #5f31af;
    background-color: #ebe6ff;
    font-size: 1rem;
  }

  .contact-form h2 {
    color: #5f31af;
    background-color: #ebe6ff;
  }

  .text-input {
    color: #5f31af;
    font-size: 1.2rem;
    width: 100%;
    text-transform: capitalize;
    font-weight: bold;
  }

  .box {
    border: 1px solid #482a83;
    border-radius: 5px;
    background-color: #ebe6ff;
    color: #6a028c;
    padding: 6px;
    font-size: 1.5em;
    margin: 18px 1px;
  }
  

  .form-submitted-image {
    max-width: 100%;
    height: 350px;
    margin: 0 auto;
  }
}

